# metadefender-core-client-cpp

./: .gitignore  README.md
CMakeModules/: gtest.cmake  rapidjson.cmake
example/: main.cpp
include/mdrestclient/: md_curl_http_client.h  md_error_messages.h  md_exception.h  md_http_client.h  md_http_session.h  md_rapidjson_wrapper.h  md_rest.h  md_rest_response.h  md_rest_response_objects.h  md_scan_result_codes.h  md_stringbuf.h  md_utils.h
test/: CMakeLists.txt  batch_json_builder.cpp  batch_json_builder.h  def_resp_object_creator.cpp  def_resp_object_creator.h  json_builder.cpp  json_builder.h  mock_http_client.cpp  mock_http_client.h  tst_cancel_batch.cpp  tst_cancel_scan_by_id.cpp  tst_close_batch.cpp  tst_create_session.cpp  tst_destroy_session.cpp  tst_exceptions.cpp  tst_fetch_available_scan_rules.cpp  tst_fetch_batch_scan_result.cpp  tst_fetch_sanitized_file_by_id.cpp  tst_fetch_scan_result_by_hash.cpp  tst_fetch_scan_result_by_id.cpp  tst_get_engine_info.cpp  tst_init_batch.cpp  tst_license_info.cpp  tst_scan_file.cpp  tst_scan_file_by_path.cpp  tst_scan_file_in_batch.cpp  tst_version_info.cpp  util.cpp  util.h
